# learning

./: .gitignore  README.md
fast_api/: .gitignore  README.md  car_sharing.py  car_sharing_01_first_steps.py  car_sharing_02_serving_data.py  car_sharing_03_serving_structured_data_pydantic_model.py  cars.json  generated-requests.http  pyproject.toml  schemas.py
unit_test_with_pytest/: .coveragerc  README.md  pyproject.toml  pytest.ini
unit_test_with_pytest/src/module03/: phonenumbers.py
unit_test_with_pytest/src/module04/: fizzbuzz.py
unit_test_with_pytest/src/module05/dummy/: fizzbuzz.py
unit_test_with_pytest/src/module05/spy/: discounts.py
unit_test_with_pytest/src/module05/stub/: alarm.py
unit_test_with_pytest/src/module06/gilded_rose/: gilded_rose.py
unit_test_with_pytest/src/module06/supermarket_receipt/: shopping_cart.py  teller.py
unit_test_with_pytest/src/module07/ice_cream_forecasts/: forecasts.py  scorer.py
unit_test_with_pytest/tests/module03/: conftest.py  test_phonebook.py
unit_test_with_pytest/tests/module04/: test_fizzbuzz.py
unit_test_with_pytest/tests/module05/dummy/: test_fizzbuzz.py  test_fizzbuzz_dummy.py
unit_test_with_pytest/tests/module05/fake/: test_html_pages.py
unit_test_with_pytest/tests/module05/mock/: test_discount_manager.py  test_discount_manager_mock.py
unit_test_with_pytest/tests/module05/spy/: test_discount_manager.py  test_discount_manager_using_mock.py
unit_test_with_pytest/tests/module05/stub/: test_alarm.py
unit_test_with_pytest/tests/module06/gilded_rose/: test_gilded_rose.py
(+9 files in other folders)
