[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]",
]

[tool.vulture]
exclude = [".venv", ".idea/", "*.lock", "*.txt", "*.toml", "*.md"]
ignore_decorators = ["@app.*", "@rpc"]
#ignore_names = ["visit_*", "do_*"]
make_whitelist = true
min_confidence = 60
paths = ["."]
sort_by_size = true
#verbose = true
